add favicon for index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="twitter:card" content="summary_large_image" />
   <title>MIRROR FUTURE DIAMOND</title>
-
+  <!-- Favicon -->
+  <link rel="icon" href="./src/assets/images/Mirror_Vertical_Logo_Pink.svg" type="image/x-icon" />
   <!-- External libraries -->
   <link rel="stylesheet" href="https://unpkg.com/animate.css@4.1.1/animate.css" />
   <link rel="stylesheet" href="https://unpkg.com/@teleporthq/teleport-custom-scripts/dist/style.css" />
